# GeoChat

./: .dockerignore  .env.example  .gitignore  .opensourceignore  DESIGN.md  LICENSE  NOTICE  OPEN_SOURCE.md  OPEN_SOURCE_EXPORT.txt  OPEN_SOURCE_SCAN.md  PRODUCT.md  README.en.md  README.md  THIRD_PARTY_NOTICES.md  drizzle.config.ts  package.json  tsconfig.node.json  tsconfig.web.json  vite.tauri.config.ts
docs/: advanced-drawing-command-semantics.md  agent-constraint-taxonomy.md  agent-development-stack.md  agent-harness-roadmap.md  desktop-architecture-refactor-plan.md  geogebra-applet.md  open-source-boundary.md  product-design-optimization-plan.md  tauri2-shell-migration-plan.md
scripts/: build-backend-bundle.mjs  check-app-bundle-evidence.mjs  export-open-source.mjs  install-app-bundle.mjs  run-tauri-local-acceptance.mjs  smoke-app-bundle-manifest.mjs  smoke-packaged-backend-runtime.mjs  smoke-tauri-packaged-layout.mjs  stage-renderer-bundle.mjs  stage-runtime-sidecar.mjs  stage-vendor-bundle.mjs  write-app-bundle-evidence.mjs  write-app-bundle-manifest.mjs
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: access.rs  app_bundle.rs  app_bundle_protocol.rs  env_config.rs  installed_client_smoke.rs  main.rs  mcp.rs  settings.rs  shell_update.rs  sidecar.rs  update_flow.rs  update_state.rs
src-tauri/src/commands/: access.rs  app_bundle_update.rs  improvement.rs  mcp.rs  mod.rs  runtime.rs  shell_update.rs
tests/: advanced-drawing-tools.test.ts  agent-harness.test.ts  (+36 more)
(+199 files in other folders)
