[package]
name = "geochat-desktop-tauri"
version = "0.2.8"
description = "GeoChat Tauri shell migration spike"
authors = ["GeoChat"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
pem = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", default-features = false, features = ["wry"] }
tauri-plugin-opener = { version = "2", default-features = false }
tauri-plugin-updater = { version = "2", default-features = false, features = ["rustls-tls"] }
time = { version = "0.3", features = ["formatting"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
